--- a/.bochsrc
+++ b/.bochsrc
@@ -449,11 +449,11 @@ debugger_log: -
 #   parport2: enabled=1, file="/dev/lp0"
 #   parport1: enabled=0
 #=======================================================================
- parport1: enabled=1, file="/dev/stdout"
+# parport1: enabled=1, file="/dev/stdout"
 # parport1: enabled=1, file="stdout"
 # parport1: enabled=1, file="console.out"
-# parport1: enabled=1, file="CON"  # or "CON:"
-#parport1: enabled=1, file=-
+parport1: enabled=1, file="CON"  # or "CON:"
+# parport1: enabled=1, file=-
 # parport1: enabled=1, file=/dev/tty
 
 #=======================================================================
